@@ -1,0 +1,7 @@
+#include <sys/ioctl.h>
+
+int main()
+{
+   ioctl(9, TIOCSIG, 9);
+   return 0;
+}
